--- a/distribution/conf/broker.conf
+++ b/distribution/conf/broker.conf
@@ -20,5 +20,5 @@ deleteWhen = 04
 fileReservedTime = 48
 brokerRole = ASYNC_MASTER
 flushDiskType = SYNC_FLUSH
-# namesrvAddr = 10.227.89.87:9876
+# namesrvAddr =
 checkTransactionMessageEnable=false
